--- a/AhmedQahtan/css/index.css
+++ b/AhmedQahtan/css/index.css
@@ -19,19 +19,19 @@ header{
 header .logo{
     text-decoration: none;
     color: rgb(56, 64, 177);
-    font-weight: 700;
-    font-size: 1.5em;
+    font-weight: 800;
+    font-size: 2.5em;
 }
 
 header nav a{
     text-decoration: none;
-    font-size:1.em ;
+    font-size:1.5em ;
     font-weight:700 ;
     color:rgb(56, 64, 177);
-    padding-left: 30px;   
+    padding-left: 40px;   
 }
 
- header nav a:hover{
+header nav a:hover{
     color: rgb(123, 141, 238);
 }
 
@@ -58,18 +58,18 @@ section{
 .main h2{
     color:#000;
     font-weight: 500;
-    font-size: 0.5em;
+    font-size: 1.2em;
 }
 .main h2 span{
     display: inline-block;
     color: rgb(0, 0, 0);
     font-size: 3em;
     font-weight: 600;
-    margin-top:10px ;
+    margin-top:-25px ;
 }
 
 .main h3{
-    font-size:1.2em ;
+    font-size:2.2em ;
     font-weight:700 ;
     color: rgb(80, 80, 88);
     letter-spacing: 1px;
@@ -81,7 +81,7 @@ section{
     color: white;
     background-color: rgb(56, 64, 177);
     text-decoration: none;
-    font-size: 0.5em;
+    font-size: 1.2em;
     font-weight: 600;
     display: inline-block;
     padding: 0.9375em 2.1875em;
@@ -96,8 +96,14 @@ section{
     transform: scale(1.1);
 }
 
-.main .Social_icon{
+.main .Social_ico{
     transition: 0.7s ease;
+}
+.Social_icon a{
+    color: #fff;
+    font-size: 2em;
+    padding-right: 40px;
+
 }
 
 .main .Social_icon :hover{
@@ -106,9 +112,9 @@ section{
 
 .main .Profile_Card{
     background-color: rgba(80, 80, 88, 70%);
-    max-width: 13em;
+    max-width: 25em;
     border: 1px solid #fff;
-    max-height: 15em; 
+    max-height: 27em; 
     border-radius: 20px;
     overflow: hidden;
     margin: 20px;
@@ -128,7 +134,7 @@ section{
 
 
 .Profile_Category{
-    font-size: 0.8em;
+    font-size: 2em;
     text-align: center;
     margin-top: -10px;
     font-weight: 800;
@@ -140,13 +146,14 @@ section{
     text-align: center;
     text-transform: uppercase;
     font-weight: 800;
+    font-size: 1.5em;
     margin-top: 5px ;
 }
 
 .profile_More_detaile{
     display: block;
     text-align: center;
-    font-size:0.5em ;
+    font-size:1em ;
     text-decoration: none;
     color: rgb(255, 255, 255);
 }
@@ -154,38 +161,15 @@ section{
 .profile_More_detaile:hover{
     color: rgb(123, 141, 238);
 }
-/* ======================= */
-.main .Project_Card{
-    background-color: rgba(255, 255, 255, 50%);
-    max-width: 13em;
-    border: 1px solid #fff;
-    max-height: 14em; 
-    border-radius: 10px;
-    overflow: hidden;
-    margin: 20px;
-    transition: 0.7s ease;
-}
 
-.main .Project_image img{
-    width: 100%;
-    border-radius: 50%;
-}
-
-.Social_icon a{
-    color: #fff;
-    font-size: 1.2em;
-    padding-right: 30px;
-
-}
 .title{
     display: flex;
     justify-content: center;
-    font-size: 2.em;
+    font-size: 3.5em;
     font-weight:800 ;
     margin-bottom: 20px;
     color: rgb(56, 64, 177);
 }
-
 
 .content{
     display: flex;
@@ -196,7 +180,7 @@ section{
 
 .Card{
     background-color: #fff;
-    width: 10em;
+    width: 13em;
     box-shadow: 0 5px 25px rgba(1, 1, 1,15% );
     border-radius: 10px;
     padding: 20px;
@@ -220,7 +204,7 @@ section{
 
 .info h3{
     color: rgb(56, 64, 177);
-    font-size: 1.2em;
+    font-size: 1.3em;
     font-weight: 700;
     margin: 10px;
 
@@ -235,7 +219,7 @@ section{
 
 .Project_Card{
     background-color: #fff;
-    width: 11em;
+    width: 15em;
     border: 1px solid #fff;
     min-height: 14em; 
     border-radius: 10px;
@@ -261,7 +245,7 @@ section{
 
 
 .Project_Category{
-    font-size: 0.8em;
+    font-size: 1.4em;
     display: block;
     text-align: center;
     font-weight: 800;
@@ -282,6 +266,7 @@ section{
     display: block;
     text-align:center;
     text-decoration: none;
+    font-weight: 700;
     margin-top: 10px;
     color: rgb(56, 64, 177);;
 }
@@ -302,7 +287,7 @@ section{
 }
 
 .footer .box-container .box h3 {
-    font-size: 1.0em;
+    font-size: 1.5em;
     text-transform: capitalize;
     color: rgb(56, 64, 177);;
     padding: 1em 0;
