--- a/css/index.css
+++ b/css/index.css
@@ -38,6 +38,7 @@ header nav a:hover{
 
 section{
     padding: 40px 15px;
+    min-height: 80vh;
 }
 
 
@@ -232,9 +233,13 @@ section{
     transform: scale(1.1);
 }
 
+.Project_image{
+    min-height: 50%;
+}
 
 .Project_image img{
     width: 100%;
+    height: 100%;
     
 }
 
@@ -278,6 +283,7 @@ section{
 /* footer */
 .footer {
     text-align: center;
+    padding-top: 150px;
 }
 
 .footer .box-container {
