--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,8 @@
 }
 
 header{
-    background-color: #e2e1e6;
+    background-color: #202020;
+    /* #e2e1e6 */
     width: 100%;
     position:fixed;
     z-index: 999;
@@ -18,7 +19,8 @@ header{
 
 header .logo{
     text-decoration: none;
-    color: rgb(56, 64, 177);
+    color: #fff;
+    /* rgb(56, 64, 177) */
     font-weight: 800;
     font-size: 2.5em;
 }
@@ -27,7 +29,7 @@ header nav a{
     text-decoration: none;
     font-size:1.5em ;
     font-weight:700 ;
-    color:rgb(56, 64, 177);
+    color:#fff;
     padding-left: 40px;   
 }
 
@@ -43,22 +45,60 @@ section{
 
 .main{
     width: 100%;
-    min-height: 80vh;
+    min-height: 100vh;
     display: flex;
-    justify-content:space-around;
-    align-items: center;
+    justify-content:left ;
+    align-items:center;
     flex-wrap: wrap;
-    background-image: url("../images/home-bg-slideshow2.jpg") ;
+    background-image: url("../images/landing.jpg") ;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    padding: 0px;
     
+}
+.main .a{
+    display: block;
+    padding: 15px;
+    height: 100vh;
+    min-width:40%;
+    background-color: #202020;
+}
+
+.main .b{
+    display: block;
+    margin-top: 5%;
+    margin-left: -12%;
+    border-radius: 50%;
+    border:13px solid #202020;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    min-height: 300px;
+    min-width:23%;
+    background-color: #fff;
+}
+.main .b .c{
+    background-color: #202020;
+    display: block;
+    margin-top: 5%;
+    border-radius: 50%;
+    min-height: 90%;
+    min-width:90%;
+    background-image: url("../images/a.jpg") ;
+    background-size: cover;
+    background-position: center;
+}
+
+.main h2 strong{
+    color: #fff;
 }
 
 .main h2{
     color:#000;
     font-weight: 500;
     font-size: 1.2em;
+    margin-top: 30%;
 }
 .main h2 span{
     display: inline-block;
@@ -69,17 +109,18 @@ section{
 }
 
 .main h3{
-    font-size:2.2em ;
+    font-size:1.5em ;
     font-weight:700 ;
     color: white;
     letter-spacing: 1px;
-    margin-top: 10px;
+    margin-top: 15px;
     margin-bottom: 10px;
 }
 
 .main_btn{
-    color: white;
-    background-color: rgb(56, 64, 177);
+    color: #202020;
+    background-color: hsl(0, 0%, 100%);
+    box-shadow: 0 5px 20px rgba(255, 255, 255, 50%);
     text-decoration: none;
     font-size: 1.2em;
     font-weight: 600;
@@ -87,27 +128,31 @@ section{
     padding: 0.9375em 2.1875em;
     letter-spacing: 1px;
     border-radius: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
+    margin-left: 50px;
+    margin-top: 40%;
     transition: 0.7s ease;
 }
 
 .main_btn:hover{
-    background-color: rgb(33, 42, 175);
+    background-color: #202020;
+    color: #fff;
     transform: scale(1.1);
 }
 
-.main .Social_ico{
+.main .a .Social_icon{
     transition: 0.7s ease;
+    margin-left: 40px;
 }
 .Social_icon a{
-    color: rgb(80, 80, 88);
+    color: #fff;
     font-size: 2em;
     padding-right: 40px;
 
 }
 
 .main .Social_icon :hover{
-    transform: scale(1.5);
+    transform: scale(1.3);
     color: #fff;
 }
 /* 
